--- a/.github/workflows/release-on-push-tag.yaml
+++ b/.github/workflows/release-on-push-tag.yaml
@@ -20,7 +20,7 @@ jobs:
           fetch-tags: true
           fetch-depth: 0
 
-      - name: 'Generate Tag'
+      - name: 'Generate Release'
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
           TAG: '${{ github.ref }}'
