Fix release pipelines #patch
Signed-off-by: Mustafa Kara <mkara@opsheaven.space>

--- a/.github/workflows/tag-on-push-to-main.yaml
+++ b/.github/workflows/tag-on-push-to-main.yaml
@@ -20,8 +20,8 @@ jobs:
           fetch-tags: true
           fetch-depth: 0
 
-      - name: 'Generate Tag'
+      - name: 'Generate Release'
         env:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         run: |
-          make tag
+          make release
